typescript/checker/tests/conformance/async/es6/functionDeclarations/asyncFunctionDeclaration9_es6.ts.stderr
error: Unexpected token Some(RBracket)
 --> $DIR/tests/conformance/async/es6/functionDeclarations/asyncFunctionDeclaration9_es6.ts:4:19
  |
4 |   var v = { [await]: foo }
  |                   ^

